fix checkbox alignment issue introduced in 1.0.194

--- a/theme/userstyle.css
+++ b/theme/userstyle.css
@@ -95,9 +95,14 @@ hr {
     margin-left: 0 !important;
 }
 
+.md-checkbox .checkbox-wrapper {
+    align-items: flex-start;
+}
+
 .md-checkbox input[type="checkbox"i] {
     margin-left: -24px !important;
     opacity: 0.5 !important;
+    margin-top: 7px;
 }
 
 .md-checkbox input[type=checkbox]:checked {
